# webfinder

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  turbosearch.restore  webfinder.py
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_and_publish.yml  build_and_test.yml
tests/: tests.py
webfinder/: __main__.py  __meta__.py  args.py  config.py  result_pattern.py  webfinder.py
webfinder/resources/: waf_headers.json
webfinder/util/: getter.py  pathgetter.py  ssl.py  tools.py
