[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies"]
name = "WafWebFinder"
description = "Automated web server (behind WAF) finder."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9,<4"
license = {file = "LICENSE"}
keywords = ["web finder", "WAF Bypass", "development", "red team"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Security",
  "Topic :: Utilities"
]

authors = [
  {name = "Helvio Junior (M4v3r1ck)", email = "helvio_junior@hotmail.com"}
]
maintainers = [
  {name = "Helvio Junior (M4v3r1ck)", email = "helvio_junior@hotmail.com"}
]

[tool.setuptools]
include-package-data = false
#packages = ["webfinder"]
#package-dir = {"" = "webfinder"}

[tool.setuptools.packages.find]
namespaces = true
include = [
  "webfinder*",
  "webfinder.*",
]
exclude = ["webfinder*tests", "webfinder*images", "webfinder*docs"]
# alternatively: `exclude = ["additional*"]`

[tool.setuptools.package-data]
'webfinder' = [
  'resources/*',
  'resources/**/*',
]

[project.urls]
Documentation = "https://github.com/helviojunior/webfinder"
Source = "https://github.com/helviojunior/webfinder"
Tracker = "https://github.com/helviojunior/webfinder"
Author = "https://github.com/helviojunior"

[tool.setuptools.dynamic]
version = {attr = "webfinder.__meta__.__version__"}
dependencies = {file = "requirements.txt"}

[project.scripts]
webfinder = "webfinder.webfinder:run"
wafwebfinder = "webfinder.webfinder:run"
